# projeto-final-NathanLopes0

./: CMakeLists.txt  README.md  TODO.txt  lista TODO completa
Assets/: Background2.json
Assets/Icons/: DPIBHApprovedSign.json  DPIBHPowerIcon.json
Assets/Teachers/: DPIBHRicardoDrone.png.json
Assets/Teachers/Projectiles/: DPIBHAndreGraph.json
Source/: AudioSystem.cpp  AudioSystem.h  Font.h  Game.cpp  Game.h  Main.cpp  Scene.cpp  Scene.h
Source/Actors/: Actor.cpp  Actor.h  Button.cpp  Button.h  LimiterMenu.cpp  LimiterMenu.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  Teacher.cpp  Teacher.h
Source/Actors/Projectiles/: Projectile.cpp  Projectile.h  Question.cpp  Question.h  Task.cpp  Task.h
Source/Actors/Teachers/: Drone.cpp  Drone.h  Teacher.cpp  Teacher.h
Source/Actors/Teachers/TStates/: StartState.cpp  StartState.h  StateOne.cpp  StateOne.h  StateThree.cpp  StateThree.h  StateTwo.cpp  StateTwo.h  TState.cpp  TState.h
Source/Components/: Component.cpp  Component.h  RigidBodyComponent.cpp
Source/Components/AIComponents/: FSMComponent.cpp
Source/Components/ColliderComponents/: CircleColliderComponent.cpp
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawComponent.cpp  DrawPolygonComponent.cpp  DrawSpriteComponent.cpp  DrawSpriteComponent.h  DrawSpriteWColorEffect.cpp  DrawSpriteWColorEffect.h  DrawTextComponent.cpp
Source/Scenes/: Battle.cpp  Battle.h  Lose.cpp  Lose.h  MainMenu.cpp  MainMenu.h  Scene.cpp  Scene.h  SelectPlayers.cpp  SelectPlayers.h  StageSelect.cpp  StageSelect.h  Win.cpp  Win.h
